--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body style="background:#f5821f">
     <div class="header1">
-      <img class="steve" alt="steve jobs" src="Steve jobs 1955-2011.jpg" >
+      <img class="steve" alt="steve jobs" src="Steve.PNG" >
     </div>
     <h1 class="header">Steve Jobs Golden Years</h1>
     <button class="button2"><a href="https://Assignment-4.logan0grant0.repl.co">Early Years</a></button>
@@ -23,18 +23,18 @@
       </div>
     </div><br>
     <p class="left-column">
-      <button class="class" id="b1">21. Disney</button><br>
-      <button class="class" id="b2">22. Bill Gates and Steve Jobs Become Friends </button><br>
-      <button class="class" id="b3">23. iTunes</button><br>
-      <button class="class" id="b4">24. Movie I</button><br>
-      <button class="class" id="b5">25. Movie II</button><br>
-      <button class="class" id="b6">26. Success</button><br>
-      <button class="class" id="b7">27. iPhone</button><br>
-      <button class="class" id="b8">28.Illness and Death</button><br>
-      <button class="class" id="b9">29.Grief</button><br>
-      <button class="class" id="b10">30. references</button><br>
+      <button class="class" id="b1">1. Birth</button><br>
+      <button class="class" id="b2">2. Childhood</button><br>
+      <button class="class" id="b3">3. High School</button><br>
+      <button class="class" id="b4">4. College</button><br>
+      <button class="class" id="b5">5. Lisa</button><br>
+      <button class="class" id="b6">6. Atari</button><br>
+      <button class="class" id="b7">7. Apple</button><br>
+      <button class="class" id="b8">8. Bill Gates</button><br>
+      <button class="class" id="b9">9. Jobs Quit Apple</button><br>
+      <button class="class" id="b10">10. Bill Gates Quote</button><br>
     </p>
-    <p class="right-column" > <span> <img alt="alt" src="Apple_Computer_Logo_rainbow (1).svg" id="right-img" style="width 100px"> </span></p>
+    <p class="right-column" > <span> <img alt="alt" src="AppleLogo.png" id="right-img" style="width 100px"> </span></p>
     <p id="paragraph">Please click on a button on the left to view</p><br>
     <p class="footer">Logan Grant<br>Hugh O`Hara<br>ICS20<br>March 24<sup>th</sup>,2021</p>
     <script src="script.js" ></script>
